<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/black_calculator"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/child1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_red_dark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="@color/colorAccent"
            android:text="@string/plus"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:tooltipText="@string/plus"
            tools:ignore="ButtonStyle,UnusedAttribute" />

        <Button
            android:id="@+id/btnsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="@color/colorAccent"
            android:text="@string/minus"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:tooltipText="@string/minus"
            tools:ignore="ButtonStyle,UnusedAttribute" />

        <Button
            android:id="@+id/btnmult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="@android:color/background_dark"
            android:text="@string/multi"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:tooltipText="@string/multi"
            tools:ignore="ButtonStyle,UnusedAttribute" />

        <Button
            android:id="@+id/btndiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="@color/colorAccent"
            android:text="@string/division"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:tooltipText="@string/division"
            tools:ignore="ButtonStyle,UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/child2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="50"
            android:text="@string/num1"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="50"
            android:text="@string/num2"
            android:textAlignment="center"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="50"
            android:ems="10"
            android:hint="Num 1 here"
            android:textAlignment="center"
            android:inputType="textPersonName"
            tools:ignore="Autofill,HardcodedText"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="50"
            android:textAlignment="center"
            android:ems="10"
            android:hint="Num 2 here"
            android:inputType="textPersonName"
            tools:ignore="Autofill,HardcodedText,RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/your_answer"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="40sp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et3"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/wait"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="65dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/copyright2020all_rights_reserved_kd_style"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>